# hello-cicd

./: .codeclimate.yml  .dogeops  .editorconfig  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  Makefile  README.md  app.yml  buildspec.yml  disabled.gitlab-ci.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-nuxt2.yml  ci-pipeilne.yml  ci-python.yml  ci-test.yml  terraform.yml  test-dogeops-action.yml
api/: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
api/greet/: urls.py  views.py
api/hello_aws/: settings.py  urls.py
docs/: aws_cli.md  buildspec.yml  github-actions.md  gitlab+aws.md  lb_create.json  multi_stage.md  tg_create.json
front/: .prettierrc  Dockerfile  nuxt.config.js  package-lock.json  package.json
front/components/: Tutorial.vue
front/pages/: index.vue
hello_aws/: manage.py
hello_aws/greet/: models.py  tests.py  urls.py  views.py
hello_aws/hello_aws/: asgi.py  settings.py  urls.py  wsgi.py
src/: __main__.py
