[tool.poetry]
name = "repo-mirroring"
version = "0.1.0"
description = "GitLab -> CodeCommit mirror test"
authors = ["Carlos Gonzalez <carlos.gonzalez@with-madrid.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
