[tool.poetry]
name = "repo-mirroring"
version = "0.1.0"
description = "GitLab -> CodeCommit mirror test"
authors = ["Carlos Gonzalez <carlos.gonzalez@with-madrid.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
carlos = 'repo-mirroring:main'

[build-system]
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip"]
build-backend = "poetry.core.masonry.api"
