[tool.poetry]
name = "repo-mirroring"
version = "0.1.0"
description = "GitLab -> CodeCommit mirror test"
authors = ["Carlos Gonzalez <carlos.gonzalez@with-madrid.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
